--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,74 +1,74 @@
 <div id="app-table-layer" style="position: absolute; width: 100%; height: 100%; overflow: hidden;">
   <game-table></game-table>
 </div>
-<ui-panel (rotateEvent)="rotateChange($event)" [top]="0" [left]="0" [width]="100" [height]="710" [title]="'メニュー'" [isAbleFullScreenButton]="false" [isAbleCloseButton]="false"  [isAbleRotateButton]="true">
+<ui-panel (rotateEvent)="rotateChange($event)" [top]="0" [left]="0" [width]="100" [height]="710" [title]="'메뉴'" [isAbleFullScreenButton]="false" [isAbleCloseButton]="false"  [isAbleRotateButton]="true">
   <nav [ngClass]="{'horizontal': isHorizontal}">
     <ul>
       <li (click)="open('PeerMenuComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">people</i></div>
-          <div>接続</div>
+          <div>접속</div>
         </a>
       </li>
       <li (click)="open('ChatWindowComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">speaker_notes</i></div>
-          <div>チャット画面</div>
+          <div>채팅 화면</div>
         </a>
       </li>
       <li (click)="open('GameTableSettingComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">layers</i></div>
-          <div>テーブル設定</div>
+          <div>테이블 설정</div>
         </a>
       </li>
       <li (click)="open('FileStorageComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">photo_library</i></div>
-          <div>画像</div>
+          <div>이미지</div>
         </a>
       </li>
       <li (click)="open('JukeboxComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons">queue_music</i></div>
-          <div>音楽</div>
+          <div>음악</div>
         </a>
       </li>
       <li (click)="toolBox()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons">build</i></div>
-          <div>ツールボックス</div>
+          <div>툴 박스</div>
         </a>
       </li>
       <li (click)="open('GameObjectInventoryComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">folder_shared</i></div>
-          <div>インベントリ</div>
+          <div>인벤토리</div>
         </a>
       </li>
       <li (click)="diceAllOpne()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">all_out</i></div>
-          <div>ダイス一斉公開</div>
+          <div>다이스를 전부 공개한다</div>
         </a>
       </li>
       <li (click)="standSetteings()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">how_to_reg</i></div>
-          <div>個人設定<sup class="self-only">*</sup></div>
+          <div>개인 설정<sup class="self-only">*</sup></div>
         </a>
       </li>
       <li (click)="resetPointOfView()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">remove_red_eye</i></div>
-          <div>視点リセット<sup class="self-only">*</sup></div>
+          <div>시점 리셋<sup class="self-only">*</sup></div>
         </a>
       </li>
       <li>
         <a routerLink="/" routerLinkActive="active">
           <label>
             <div><i class="material-icons">open_in_browser</i></div>
-            <div>ZIP読込</div>
+            <div>ZIP 불러오기</div>
             <input type="file" style="display: none;" (change)="handleFileSelect($event)" multiple
               accept="application/xml,text/xml,application/zip" />
           </label>
@@ -77,7 +77,7 @@
       <li *ngIf="!isSaveing" (click)="save()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons">sd_storage</i></div>
-          <div>保存</div>
+          <div>저장</div>
         </a>
       </li>
       <li *ngIf="isSaveing" style="pointer-events: none;">
