--- a/src/app/component/game-character-sheet/game-character-sheet.component.html
+++ b/src/app/component/game-character-sheet/game-character-sheet.component.html
@@ -1,44 +1,44 @@
-<button (click)="toggleEditMode()">編集切り替え</button>
+<button (click)="toggleEditMode()">편집으로 전환</button>
 <ng-container [ngSwitch]="tabletopObject.aliasName">
   <ng-container *ngSwitchCase="'numberResource'">
   </ng-container>
   <ng-container *ngSwitchCase="'card'">
-    <button (click)="openModal('front')" [disabled]="!isVisible">表面の画像を変更</button>
-    <button (click)="openModal('back')">裏面の画像を変更</button>
+    <button (click)="openModal('front')" [disabled]="!isVisible">앞면의 이미지를 변경</button>
+    <button (click)="openModal('back')">뒷면의 이미지를 변경</button>
   </ng-container>
   <ng-container *ngSwitchCase="'card-stack'">
-    <button (click)="openModalChangeAllCardImages()">全カードの裏面の画像を変更</button>
+    <button (click)="openModalChangeAllCardImages()">모든 카드의 뒷면 이미지를 변경</button>
   </ng-container>
   <ng-container *ngSwitchCase="'terrain'">
-    <button (click)="openModal('floor')">床の画像を変更</button>
-    <button (click)="openModal('wall')">壁の画像を変更</button>
+    <button (click)="openModal('floor')">바닥 이미지를 변경</button>
+    <button (click)="openModal('wall')">벽의 이미지를 변경</button>
   </ng-container>
   <ng-container *ngSwitchCase="'dice-symbol'">
-    <button (click)="openModal(tabletopObject['face'])" [disabled]="!isVisible">ダイス目の画像を変更</button>
+    <button (click)="openModal(tabletopObject['face'])" [disabled]="!isVisible">다이스눈의 이미지를 변경</button>
   </ng-container>
   <ng-container *ngSwitchCase="'character'">
-    <button (click)="openModalReplaceImage(tabletopObject.imageFiles.length > 1 || 0 < tabletopObject.imageFile?.url.length)">画像{{ (tabletopObject.imageFiles?.length > 1) ? '置換/削除' : '設定' }}</button>
-    <button [disabled]="tabletopObject.faceIcons?.length >= MAX_IMAGE_ICON_COUNT" (click)="openModal('faceIcon')">顔IC{{ (tabletopObject.faceIcons?.length > 0) ? '追加' : '設定' }}</button>
+    <button (click)="openModalReplaceImage(tabletopObject.imageFiles.length > 1 || 0 < tabletopObject.imageFile?.url.length)">이미지{{ (tabletopObject.imageFiles?.length > 1) ? '변경/삭제' : '설정' }}</button>
+    <button [disabled]="tabletopObject.faceIcons?.length >= MAX_IMAGE_ICON_COUNT" (click)="openModal('faceIcon')">얼굴 아이콘{{ (tabletopObject.faceIcons?.length > 0) ? '추가' : '설정' }}</button>
   </ng-container>
   <ng-container *ngSwitchDefault>
-    <button (click)="openModal('imageIdentifier', tabletopObject.imageFile && tabletopObject.imageFile.url.length > 0)">画像変更</button>
+    <button (click)="openModal('imageIdentifier', tabletopObject.imageFile && tabletopObject.imageFile.url.length > 0)">이미지 변경</button>
   </ng-container>
 </ng-container>
-<button (click)="clone()">コピーを作る</button>
+<button (click)="clone()">사본을 만든다</button>
 <button [disabled]="isSaveing" (click)="saveToXML()">
   <div style="position: relative;">
-    <div [ngClass]="{'is-hidden': isSaveing}">保存</div>
+    <div [ngClass]="{'is-hidden': isSaveing}">저장</div>
     <div *ngIf="isSaveing" class="progress">{{progresPercent}}%</div>
   </div>
 </button>
 <ng-container *ngIf="tabletopObject.aliasName === 'character'">
   <select *ngIf="tabletopObject" (change)="setLocation($event.target.value)" [ngModel]="tabletopObject.location.name">
-    <option value="table">テーブル</option>
-    <option value="common">共有インベントリ</option>
-    <option value="{{networkService.peerId}}">個人インベントリ</option>
-    <option value="graveyard">墓地</option>
+    <option value="table">테이블</option>
+    <option value="common">공유 인벤토리</option>
+    <option value="{{networkService.peerId}}">개인 인벤토리</option>
+    <option value="graveyard">묘지</option>
   </select>
-  <button (click)="openModal('shadowImageIdentifier', tabletopObject.shadowImageFile.url.length > 0)" [disabled]="!tabletopObject.imageElement || tabletopObject.imageElement.value == 'null'">画像の影の変更</button>
+  <button (click)="openModal('shadowImageIdentifier', tabletopObject.shadowImageFile.url.length > 0)" [disabled]="!tabletopObject.imageElement || tabletopObject.imageElement.value == 'null'">이미지의 그림자 변경</button>
 </ng-container>
 <div *ngIf="tabletopObject" class="flex-container">
   <img class="shadow-image" [src]="tabletopObject.shadowImageFile.url | safe: 'resourceUrl'" [alt]="tabletopObject.shadowImageFile.name" (click)="openModal('shadowImageIdentifier', true)">
@@ -47,7 +47,7 @@
       <div *ngFor="let faceIconImage of tabletopObject.faceIcons; index as i; trackBy: identify" style="position: relative" [style.top.px]="-showIconOffset(i)">
         <div @bounceInOut *ngIf="0 < faceIconImage.url.length" class="icon-image-box" [ngClass]="{'current-icon': tabletopObject.currntIconIndex == i}">
           <img [src]="faceIconImage.url | safe: 'resourceUrl'" [alt]="faceIconImage.name" (click)="selectIcon(i)" />
-          <button *ngIf="tabletopObject.currntIconIndex == i" class="button-delete-icon" title="顔IC削除" (click)="deleteIcon(i, faceIconImage.identifier)">
+          <button *ngIf="tabletopObject.currntIconIndex == i" class="button-delete-icon" title="얼굴 아이콘 삭제" (click)="deleteIcon(i, faceIconImage.identifier)">
             <b class="material-icons" style="font-size: 1rem;">close</b>
           </button>
         </div>
@@ -84,8 +84,8 @@
           [isHideText]="tabletopObject.aliasName === 'card' && !tabletopObject.isFront && !tabletopObject.isHand && !tabletopObject.isGMMode" [isNoLogging]="isNoLogging" [descriptionType]="tabletopObject.aliasName"></div>
       </div>
       <div *ngIf="tabletopObject.aliasName === 'character'" style="margin-top: 3px; text-align: right">
-        <button style="font-size: 11px; color: #444;" (click)="showChatPalette()">チャットパレットを表示</button>
-        <button style="font-size: 11px; color: #444;" (click)="showStandSetting()">スタンド設定</button>
+        <button style="font-size: 11px; color: #444;" (click)="showChatPalette()">채팅 팔레트를 표시</button>
+        <button style="font-size: 11px; color: #444;" (click)="showStandSetting()">스탠딩 설정</button>
       </div>
     </div>
   </ng-container>
@@ -100,7 +100,7 @@
 
   <ng-container *ngIf="isEdit">
     <div class="flex-item">
-      <button style="width:100%; color: #555;" (click)="addDataElement()">新しい項目を追加</button>
+      <button style="width:100%; color: #555;" (click)="addDataElement()">새로운 항목을 추가</button>
     </div>
   </ng-container>
 </div>
