--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
       <li (click)="diceAllOpne()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">all_out</i></div>
-          <div>다이스를 전부 공개한다</div>
+          <div>다이스를 한번에 공개한다</div>
         </a>
       </li>
       <li (click)="standSetteings()">
