--- a/src/app/component/card-stack/card-stack.component.html
+++ b/src/app/component/card-stack/card-stack.component.html
@@ -27,7 +27,7 @@
       </div>
     </ng-container>
     <div *ngIf="isShowTotal" class="name-tag is-nowrap is-black-background is-3d number-of-cards" style="z-index: 10" [ngStyle]="{'transform': 'translateY(-50%) translateX(-50%) translateX(' + size * gridSize / 2 +'px) rotateZ(' + (isInverse ? 180 : 0) + 'deg)'}">
-      <span [ngClass]="{'is-inverse': isInverse}">{{cards.length}}枚</span>
+      <span [ngClass]="{'is-inverse': isInverse}">{{cards.length}}장</span>
     </div>
     <div *ngIf="hasOwner" class="name-tag has-length-limit is-nowrap is-black-background is-3d" style="z-index: 10; color: whitesmoke" [ngStyle]="{'background-color': ownerColor,'transform': 'translateY(50%) translateX(-50%) translateX(' + size * gridSize / 2 +'px) rotateZ(' + (isInverse ? 180 : 0) + 'deg)'}">
       <span [ngClass]="{'is-inverse': isInverse}"><b>{{ownerName}}</b> 님이 확인 중</span>
