--- a/src/app/component/card-stack-list/card-stack-list.component.html
+++ b/src/app/component/card-stack-list/card-stack-list.component.html
@@ -1,11 +1,11 @@
 <div>
-  <button (click)="close(true)">シャッフルしてウィンドウを閉じる</button>
+  <button (click)="close(true)">섞고 창을 닫는다</button>
   <hr/>
   <div *ngFor="let card of cardStack.cards; trackBy: trackByCard" class="box">
     <card-list-image [card]="card"></card-list-image>
     <div style="display: inline-block;">
-      <button type="submit" (click)="drawCard(card)">山札から出す</button>
-      <button (click)="showDetail(card)"><i class="material-icons" style="font-size: 1.1em; vertical-align: text-bottom;">settings</i>編集</button>
+      <button type="submit" (click)="drawCard(card)">카드 더미로부터 꺼낸다</button>
+      <button (click)="showDetail(card)"><i class="material-icons" style="font-size: 1.1em; vertical-align: text-bottom;">settings</i>편집</button>
       <br>
       <button (click)="up(card)">↑</button>
       <button (click)="down(card)">↓</button>
