--- a/src/app/component/chat-input/chat-input.component.html
+++ b/src/app/component/chat-input/chat-input.component.html
@@ -20,31 +20,31 @@
     <div>
       <label style="margin-right: 5px">
         <input *ngIf="character" type="checkbox" [(ngModel)]="isUseFaceIcon" checked="{{isUseFaceIcon ? 'checked' : ''}}" (change)="isUseFaceIcon = (isUseFaceIcon ? true : false)" />
-        <b *ngIf="character" style="font-size: smaller;">顔IC</b>
+        <b *ngIf="character" style="font-size: smaller;">얼굴 아이콘</b>
       </label>
       <select [style.max-width]="character ? '9.5em' : '13em'" [(ngModel)]="sendFrom" (change)="standName = ''" [ngStyle]="{'color': color, 'font-weight': (sendFrom != myPeer?.identifier ? 'normal' : 'bolder')}">
-        <option *ngIf="!onlyCharacters" value="{{myPeer?.identifier}}" [style.color]="myColor" style="font-weight: bolder;">{{myPeer?.name}}（あなた）</option>
+        <option *ngIf="!onlyCharacters" value="{{myPeer?.identifier}}" [style.color]="myColor" style="font-weight: bolder;">{{myPeer?.name}}（당신）</option>
         <option *ngFor="let gameCharacter of gameCharacters" style="font-weight: normal;" [style.color]="gameCharacter.chatPalette && gameCharacter.chatPalette.color && gameCharacter.chatPalette.color != '#ffffff' ? gameCharacter.chatPalette.color : '#444'" value="{{gameCharacter.identifier}}">{{gameCharacter.name}}</option>
       </select>
       <span style="white-space: nowrap"> ➡
         <select style="max-width: 9.5em" [(ngModel)]="sendTo" [ngClass]="{'not-specified': sendTo == ''}" [ngStyle]="{'color': (sendTo == '' ? null : sendToColor), 'font-weight': (sendTo == '' ? 'normal' : 'bolder')}">
-          <option value="" class="not-specified">全員</option>
+          <option value="" class="not-specified">전원</option>
           <option *ngFor="let peer of otherPeers" value="{{peer.identifier}}" [style.color]="peer.color" style="font-weight: bolder;">{{peer.name}}
-            <ng-container *ngIf="peer === myPeer">（あなた）</ng-container>
+            <ng-container *ngIf="peer === myPeer">（당신）</ng-container>
           </option>
         </select>
       </span>
       <span style="white-space: nowrap">
         <select *ngIf="diceBotInfosIndexed.length > 0" style="width: 12em;" (change)="loadDiceBot($event.target.value)" [(ngModel)]="gameType" [ngModelOptions]="{standalone: true}"
           [ngClass]="{'not-specified': gameType == 'DiceBot' || gameType == ''}">
-          <option value="DiceBot" class="not-specified">ダイスボット指定なし</option>
+          <option value="DiceBot" class="not-specified">다이스봇 지정 없음</option>
           <optgroup *ngFor="let group of diceBotInfosIndexed" class="dice-bot-group" label="{{group.index}}">
             <option *ngFor="let diceBotInfo of group.infos" value="{{diceBotInfo.script}}">{{diceBotInfo.game}}</option>
           </optgroup>
         </select>
         <select *ngIf="diceBotInfosIndexed.length < 1" style="width: 12em;" (change)="loadDiceBot($event.target.value)" [(ngModel)]="gameType" [ngModelOptions]="{standalone: true}" disabled
           [ngClass]="{'not-specified': gameType == 'DiceBot' || gameType == ''}">
-          <option value="DiceBot" class="not-specified">ダイスボット読込中…</option>
+          <option value="DiceBot" class="not-specified">다이스봇을 읽는 중…</option>
         </select>
         <button (click)="showDicebotHelp()">?</button>
       </span>
@@ -55,19 +55,19 @@
         <b style="font-size: smaller;">Stand: </b>
       </label>
       <select style="width: 8em; margin-right: 6px;" (change)="isUseStandImage = true" [(ngModel)]="standName" [ngModelOptions]="{standalone: true}" [ngClass]="{'not-specified': standName == ''}" [attr.disabled]="!isUseStandImageOnChatTab ? '' : null" >
-        <option value="" class="not-specified">未選択</option>
+        <option value="" class="not-specified">선택되지 않음</option>
         <option *ngFor="let name of standNameList" value="{{name}}">{{name}}</option>
       </select>
       <span style="white-space: nowrap; margin-left: 1em; display: inline-block">
         <b style="font-size: smaller;">Pos: </b><input style="width: 186px" (change)="isUseStandImage = true" type="range" min="0" max="100" [(ngModel)]="character.standList.position" [attr.disabled]="!isUseStandImageOnChatTab ? '' : null">
         <input style="width: 3em; text-align: right; margin-right: 3px;" type="number" min="0" max="100" (change)="isUseStandImage = true" [(ngModel)]="character.standList.position" [attr.disabled]="!isUseStandImageOnChatTab ? '' : null"><b style="font-size: smaller;">％</b>
       </span>
-      <button style="margin-left: 1.3em; font-size: smaller;" type="button" (click)="farewellStand()" [attr.disabled]="!isUseStandImageOnChatTab ? '' : null">退去</button>
+      <button style="margin-left: 1.3em; font-size: smaller;" type="button" (click)="farewellStand()" [attr.disabled]="!isUseStandImageOnChatTab ? '' : null">퇴장</button>
     </div>
     <div>
       <form>
         <input *ngIf="onlyCharacters" type="color" style="width:1em; margin-left: 3px" [(ngModel)]="paletteColor" [ngModelOptions]="{standalone: true}">
-        <textarea class="chat-input" [placeholder]="!onlyCharacters ? 'Ctrl+⇅:履歴 &#x23CE;:送信 Shift+&#x23CE;:改行　チャットパレットの色を優先' : 'Ctrl+⇅:履歴 &#x23CE;:送信 Shift+&#x23CE;:改行　白(255,255,255):あなたの色'" [(ngModel)]="text"
+        <textarea class="chat-input" [placeholder]="!onlyCharacters ? 'Ctrl+⇅:히스토리 &#x23CE;:송신 Shift+&#x23CE;:줄 바꾸기　채팅 팔레트의 색을 우선' : 'Ctrl+⇅:히스토리 &#x23CE;:송신 Shift+&#x23CE;:줄 바꾸기　하양(255,255,255):당신의 색'" [(ngModel)]="text"
           [ngModelOptions]="{standalone: true}" (input)="onInput()" (keydown.enter)="sendChat($event)"
           (keydown.control.arrowup)="moveHistory($event, 1)" (keydown.control.arrowdown)="moveHistory($event, -1)"
           #textArea></textarea>
@@ -80,7 +80,7 @@
           <div *ngIf="peerNameAndColor.imageUrl" class="cover mini-icon" [style.background-image]="'url(' + peerNameAndColor.imageUrl + ')' | safe: 'style' "></div>
           <div style="font-weight: bold; display: inline" [style.color]="peerNameAndColor.color | safe: 'style'"><span class="peer-name">{{peerNameAndColor.name}}</span><span style="user-select: none" *ngIf="writingPeerNameAndColors.length !== (i + 1)">, </span></div>
         </div>
-         が入力中...
+         님이 입력중...
       </ng-container>
     </div>
   </div>
