--- a/src/app/component/chat-message/chat-message.component.html
+++ b/src/app/component/chat-message/chat-message.component.html
@@ -68,19 +68,19 @@
     <span style="display: inline-block">
       <span [style.color]="!chatMessage.isSpecialColor && chatMessage.color && chatMessage.color != '#ffffff' ? chatMessage.color : ''" 
         [innerHTML]="htmlEscapedText | safe: 'html'" (click)="onLinkClick($event)"></span>
-      <span *ngIf="!isEditing && chatMessage.isEdited" class="is-edited"><b style="white-space: nowrap">編集済</b> {{chatMessage.lastUpdate | date:'M/d H:mm'}}</span>
-      <button *ngIf="chatMessage.isSecret" (click)="discloseMessage()" style="padding-top: 1px; padding-bottom: 1px; margin-left: 3px;">結果を公開</button>
+      <span *ngIf="!isEditing && chatMessage.isEdited" class="is-edited"><b style="white-space: nowrap">편집됨</b> {{chatMessage.lastUpdate | date:'M/d H:mm'}}</span>
+      <button *ngIf="chatMessage.isSecret" (click)="discloseMessage()" style="padding-top: 1px; padding-bottom: 1px; margin-left: 3px;">결과를 공개</button>
     </span>
   </div>
 </ng-template>
 <ng-template #secret>
-  <span><s>（シークレットダイス）</s></span>
+  <span><s>（시크릿 다이스）</s></span>
 </ng-template>
 <ng-template #editor>
   <span class="edit-buttons" [style.visibility]="isEditing ? 'visible' : ''" style="margin-left: 4px; white-space: nowrap">
-    <button *ngIf="!isEditing" class="edit-button" (click)="editStart()" title="編集"><i class="material-icons small-font">edit</i></button>
+    <button *ngIf="!isEditing" class="edit-button" (click)="editStart()" title="편집"><i class="material-icons small-font">edit</i></button>
     <button *ngIf="!isEditing" class="edit-button" aria-hidden="true" style="visibility: hidden"><i class="material-icons small-font">clear</i></button>
-    <button *ngIf="isEditing" class="edit-button" [disabled]="editingText.trim().length == 0" (click)="editEnd()" title="確定"><i class="material-icons small-font">done</i></button>
-    <button *ngIf="isEditing" class="edit-button" (click)="editCancel()" title="キャンセル"><i class="material-icons small-font">clear</i></button>
+    <button *ngIf="isEditing" class="edit-button" [disabled]="editingText.trim().length == 0" (click)="editEnd()" title="확정"><i class="material-icons small-font">done</i></button>
+    <button *ngIf="isEditing" class="edit-button" (click)="editCancel()" title="취소"><i class="material-icons small-font">clear</i></button>
   </span>
 </ng-template>
