--- a/src/app/component/confirmation/confirmation.component.html
+++ b/src/app/component/confirmation/confirmation.component.html
@@ -3,4 +3,4 @@
 <div class="help" *ngIf="help && !helpHtml">{{help}}</div>
 <div class="help" *ngIf="helpHtml" [innerHTML]="helpHtml | safe: 'html'"></div>
 <button type="submit" (click)="ok()">ＯＫ</button>
-<button *ngIf="type > 1" type="button" (click)="cancel()">キャンセル</button>
+<button *ngIf="type > 1" type="button" (click)="cancel()">취소</button>
