--- a/src/app/component/context-menu/context-menu.component.html
+++ b/src/app/component/context-menu/context-menu.component.html
@@ -1,8 +1,8 @@
 <div style="display: flex; flex-direction: column" class="component" [ngClass]="{'icons-panel': isIconsMenu, 'submenu-panel': isSubmenu, 'is-max-limit': !isSubmenu, 'pointer-events-none': isPointerDragging}"
   (mouseleave)="hideSubMenu()"  #root>
-  <div *ngIf="(!isIconsMenu && 0 < title.length) || altitudeHande"><div class="title" [style.color]="titleColor" [style.font-weight]="titleBold ? 'bolder' : 'normal'">{{title}}<span style="font-size: small;" *ngIf="altitudeHande"> (高度 <input type="number" step="0.1" style="font-size: small; width:3.6em; text-align:right" [(ngModel)]="altitudeHande.altitude">)</span></div></div>
+  <div *ngIf="(!isIconsMenu && 0 < title.length) || altitudeHande"><div class="title" [style.color]="titleColor" [style.font-weight]="titleBold ? 'bolder' : 'normal'">{{title}}<span style="font-size: small;" *ngIf="altitudeHande"> (고도 <input type="number" step="0.1" style="font-size: small; width:3.6em; text-align:right" [(ngModel)]="altitudeHande.altitude">)</span></div></div>
   <div style="display: flex; align-items: center">
-    <div *ngIf="altitudeHande" class="altitude ruler" style="display: flex; align-self: stretch; flex-direction: column; align-content: center"><div style="margin-top: 2em;">高</div><div style="align-self: center; margin-top: auto; margin-bottom: auto">0</div><div style="margin-bottom: 2em;">低</div></div>
+    <div *ngIf="altitudeHande" class="altitude ruler" style="display: flex; align-self: stretch; flex-direction: column; align-content: center"><div style="margin-top: 2em;">높음</div><div style="align-self: center; margin-top: auto; margin-bottom: auto">0</div><div style="margin-bottom: 2em;">낮음</div></div>
     <div *ngIf="altitudeHande" class="altitude"><input #altitudeSlider class="altitude" title="{{altitudeHande.altitude}}" [(ngModel)]="altitudeHande.altitude" type="range" max="12" min="-12" step="0.5" orient="vertical"></div>
     <div style="flex-grow: 1">
       <ul>
@@ -28,14 +28,14 @@
       <input *ngIf="action.name && action.name.indexOf('☐') == 0" type="checkbox" [disabled]="action.disabled" />
       <input *ngIf="action.name && action.name.indexOf('◉') == 0" type="radio" [disabled]="action.disabled" checked />
       <input *ngIf="action.name && action.name.indexOf('○') == 0" type="radio" [disabled]="action.disabled" />
-      <span *ngIf="action.name && action.name.indexOf('ブラック') == 2" class="color-indicator" style="color: #000">■</span>
-      <span *ngIf="action.name && action.name.indexOf('ブルー') == 2" class="color-indicator" style="color: #00f">■</span>
-      <span *ngIf="action.name && action.name.indexOf('グリーン') == 2" class="color-indicator" style="color: #0f0">■</span>
-      <span *ngIf="action.name && action.name.indexOf('シアン') == 2" class="color-indicator" style="color: #0ff">■</span>
-      <span *ngIf="action.name && action.name.indexOf('レッド') == 2" class="color-indicator" style="color: #f00">■</span>
-      <span *ngIf="action.name && action.name.indexOf('マゼンタ') == 2" class="color-indicator" style="color: #f0f">■</span>
-      <span *ngIf="action.name && action.name.indexOf('イエロー') == 2" class="color-indicator" style="color: #ff0">■</span>
-      <span *ngIf="action.name && action.name.indexOf('ホワイト') == 2" class="color-indicator" style="color: #fff">■</span>
+      <span *ngIf="action.name && action.name.indexOf('블랙') == 2" class="color-indicator" style="color: #000">■</span>
+      <span *ngIf="action.name && action.name.indexOf('블루') == 2" class="color-indicator" style="color: #00f">■</span>
+      <span *ngIf="action.name && action.name.indexOf('그린') == 2" class="color-indicator" style="color: #0f0">■</span>
+      <span *ngIf="action.name && action.name.indexOf('시안') == 2" class="color-indicator" style="color: #0ff">■</span>
+      <span *ngIf="action.name && action.name.indexOf('레드') == 2" class="color-indicator" style="color: #f00">■</span>
+      <span *ngIf="action.name && action.name.indexOf('마젠타') == 2" class="color-indicator" style="color: #f0f">■</span>
+      <span *ngIf="action.name && action.name.indexOf('옐로') == 2" class="color-indicator" style="color: #ff0">■</span>
+      <span *ngIf="action.name && action.name.indexOf('화이트') == 2" class="color-indicator" style="color: #fff">■</span>
       <span *ngIf="action.materialIcon" style="vertical-align: top"><i style="font-size: 150%; padding-left: 2px;" class="material-icons">{{action.materialIcon}}</i></span>
       {{ action.name.replace('☑', '').replace('☐', '').replace('◉', '').replace('○', '') }}<sup *ngIf="action.selfOnly" class="self-only">*</sup>
       <span *ngIf="action.icon && 0 < action.icon?.url.length" class="imagebox"><img class="image" [src]="action.icon.url | safe: 'resourceUrl'"></span>
