--- a/src/app/component/cut-in-setting/cut-in-setting.component.html
+++ b/src/app/component/cut-in-setting/cut-in-setting.component.html
@@ -54,7 +54,7 @@
           </div>
           <div style="padding-left: 2px">
             <b style="font-size: smaller">채팅 말미(끝): </b><br>
-            <textarea style="width: 100%; height: 3em" placeholder="1행에 하나씩, 글의 첫머리에서 매칭되었을 때 텍스트로부터 잘라낸다&#13;&#10;@거리풍경" [(ngModel)]="cutInCond" [attr.disabled]="!isEditable ? '' : null"></textarea>
+            <textarea style="width: 100%; height: 3em" placeholder="1행에 하나씩, 글의 첫머리@에서 매칭되었을 때 텍스트로부터 잘라낸다&#13;&#10;@거리풍경" [(ngModel)]="cutInCond" [attr.disabled]="!isEditable ? '' : null"></textarea>
           </div>
         </div>
       </div>
