--- a/src/app/component/stand-element/stand-element.component.html
+++ b/src/app/component/stand-element/stand-element.component.html
@@ -66,7 +66,7 @@
             <b style="font-size: smaller;">💭</b>
           </label>
         </ng-container>
-        <button (click)="openSpeakingModal()" style="font-size: 9px" [style.font-weight]="isSpeakable ? 'bolder' : 'normal'">口パク画像 (APNGなど)</button>
+        <button (click)="openSpeakingModal()" style="font-size: 9px" [style.font-weight]="isSpeakable ? 'bolder' : 'normal'">립싱크 이미지(APNG등)</button>
         <ng-container *ngIf="positionElement">
           <br><button style="font-size: 9px; margin-right: 1em;" (click)="testStandUp()"><b>테스트(자신만 본다)<sup class="self-only">*</sup></b></button>
           <label style="margin-right: 0.3em;">
