--- a/src/app/component/peer-menu/peer-menu.component.html
+++ b/src/app/component/peer-menu/peer-menu.component.html
@@ -4,18 +4,18 @@
       (click)="changeIcon()" style="cursor: pointer">
     </div>
     <div>
-      <label style="display: inline-block; margin-bottom: 2px" [ngClass]="{'i-am-gm': isGMMode || isGMHold}"><b style="font-size: smaller"><input type="checkbox" name="i-am-gamemaster" value="I'm Gamemaster" checked="{{ isGMMode || isGMHold ? 'checked' : '' }}" (click)="onGMMode($event)">{{ isGMMode ? '現在GMモードです' : (isGMHold ? 'GMモード保留中' : 'GMモードになる') }}</b></label><br />
-      <button (click)="changeIcon()">プレイヤーアイコン変更</button>
+      <label style="display: inline-block; margin-bottom: 2px" [ngClass]="{'i-am-gm': isGMMode || isGMHold}"><b style="font-size: smaller"><input type="checkbox" name="i-am-gamemaster" value="I'm Gamemaster" checked="{{ isGMMode || isGMHold ? 'checked' : '' }}" (click)="onGMMode($event)">{{ isGMMode ? '현재 GM모드입니다.' : (isGMHold ? 'GM모드 보류중' : 'GM모드가 된다') }}</b></label><br />
+      <button (click)="changeIcon()">플레이어 아이콘 변경</button>
     </div>
   </div>
   <div>
-    あなたの色とニックネーム：<input type="color" style="width:1em; margin-right: 0.5em" [(ngModel)]="myPeerColor">　<input [(ngModel)]="myPeerName" [style.color]="myPeerColor" style="font-weight: bolder;" placeholder="ニックネーム" /><br>
-    ※最後に使った色とニックネームをブラウザに保存。<br>
-    <span style="font-size: smaller; margin-left: 1em">色を初期値に戻す際は白(255,255,255)を選択。</span>
+    당신의 색과 닉네임：<input type="color" style="width:1em; margin-right: 0.5em" [(ngModel)]="myPeerColor">　<input [(ngModel)]="myPeerName" [style.color]="myPeerColor" style="font-weight: bolder;" placeholder="ニックネーム" /><br>
+    ※최후에 사용한 색과 닉네임을 브라우저에 저장.<br>
+    <span style="font-size: smaller; margin-left: 1em">색을 초기치로 돌릴 때에는 하양(255,255,255)를 선택.</span>
   </div>
 </div>
 <div>
-  <div>あなたのID：
+  <div>당신의 ID：
     <span>
       <ng-container *ngIf="networkService.isOpen">
         <span class="id-input-container">
@@ -23,7 +23,7 @@
           <input class="id-input" type="text" value="{{ networkService.peerContext.userId }}" readonly>
         </span>
         <button *ngIf="isAbleClipboardCopy" (click)="copyPeerId()" [disabled]="isCopied"><b class="material-icons" style="font-size: 1em; vertical-align: bottom">content_copy</b></button>
-        <span [@fadeInOut]="isCopied" class="copied" [style.color]="myPeerColor"> {{ isCopied ? 'クリップボードにコピーしました。' : '' }}</span>
+        <span [@fadeInOut]="isCopied" class="copied" [style.color]="myPeerColor"> {{ isCopied ? '클립보드에 복사했습니다.' : '' }}</span>
       </ng-container>
     </span>
     <span *ngIf="!networkService.isOpen" style="font-weight: bold;">???</span>
@@ -31,7 +31,7 @@
 </div>
 <ng-container *ngIf="networkService.peerContext.isRoom">
   <hr/>
-  <div>ルーム名：
+  <div>방 이름：
     <span>
       <ng-container *ngIf="networkService.isOpen">
         <span class="id-input-container">
@@ -39,13 +39,13 @@
           <input class="id-input room-data" type="text" value="{{ networkService.peerContext.roomName + '/' + networkService.peerContext.roomId }}" readonly>
         </span>
         <button *ngIf="isAbleClipboardCopy" (click)="copyRoomName()" [disabled]="isRoomNameCopied"><b class="material-icons" style="font-size: 1em; vertical-align: bottom">content_copy</b></button>
-        <span [@fadeInOut]="isRoomNameCopied" class="copied" [style.color]="myPeerColor"> {{ isRoomNameCopied ? 'クリップボードにコピーしました。' : '' }}</span>
+        <span [@fadeInOut]="isRoomNameCopied" class="copied" [style.color]="myPeerColor"> {{ isRoomNameCopied ? '클립보드에 복사했습니다.' : '' }}</span>
       </ng-container>
     </span>
   </div>
   <ng-container *ngIf="networkService.peerContext.password">
     <div>
-      パスワード
+      패스워드
       <label sytle="white-space: nowrap">
         <input name="show-hide-password" type="checkbox" value="Show Hides" checked="{{ isPasswordOpen ? 'checked' : '' }}" (click)="onPasswordOpen($event)">
         <b class="material-icons" [ngClass]="{'red-eye': isPasswordOpen}" style="font-size: smaller">{{ isPasswordOpen ? 'visibility' : 'visibility_off' }}</b>：
@@ -57,33 +57,33 @@
         </span>
         <div style="display: inline" *ngIf="!isPasswordOpen" class="masked-password" draggable="false">{{ maskedPassword }}</div>
         <button *ngIf="isAbleClipboardCopy && isPasswordOpen" (click)="copyPassword()" [disabled]="isPasswordCopied"><b class="material-icons" style="font-size: 1em; vertical-align: bottom">content_copy</b></button>
-        <span [@fadeInOut]="isPasswordCopied" class="copied" [style.color]="myPeerColor"> {{ isPasswordCopied ? 'クリップボードにコピーしました。' : '' }}</span>
+        <span [@fadeInOut]="isPasswordCopied" class="copied" [style.color]="myPeerColor"> {{ isPasswordCopied ? '클립보드에 복사했습니다.' : '' }}</span>
       </div>
     </div>
   </ng-container>
 </ng-container>
 <hr/>
 <div *ngFor="let context of networkService.peerContexts; index as i">
-  <div *ngIf="i == 0" style="font-weight: bold">他の参加者と接続状態<span class="health">（良好 </span><i class="material-icons health health-blue">sentiment_very_satisfied</i><span class="health"> ＞ </span><i class="material-icons health health-green">sentiment_dissatisfied</i><span class="health"> ＞ </span><i class="material-icons health health-yellow">mood_bad</i><span class="health"> ＞ </span><i class="material-icons health health-red">sentiment_very_dissatisfied</i><span class="health"> 不良）</span>：</div>
+  <div *ngIf="i == 0" style="font-weight: bold">다른 참가자와 접속상태<span class="health">（양호 </span><i class="material-icons health health-blue">sentiment_very_satisfied</i><span class="health"> ＞ </span><i class="material-icons health health-green">sentiment_dissatisfied</i><span class="health"> ＞ </span><i class="material-icons health health-yellow">mood_bad</i><span class="health"> ＞ </span><i class="material-icons health health-red">sentiment_very_dissatisfied</i><span class="health"> 불량）</span>：</div>
   <div>
-    <div *ngIf="!context.isOpen">[接続中]</div>
+    <div *ngIf="!context.isOpen">[접속중]</div>
     <div [ngClass]="{'is-gm-mode': findPeerIsGMMode(context.peerId)}"><i class="{{'material-icons health ' + healthClass(context.session.health)}}" style="margin-right: 2px">{{ healthIcon(context.session.health) }}</i><span style="margin-right: 3px">{{ findUserId(context.peerId) }}</span>[<div *ngIf="findPeerImageUrl(context.peerId)" class="cover mini-icon" [style.background-image]="'url(' + findPeerImageUrl(context.peerId) + ')' | safe: 'style' "></div><span><b [style.color]="findPeerColor(context.peerId)">{{ findPeerName(context.peerId) }}</b></span>]</div>
   </div>
 </div>
 <div *ngIf="!isGMMode && !isGMHold">
   <ng-container *ngIf="!networkService.peerContext.isRoom">
-    <input [(ngModel)]="targetUserId" placeholder="接続したい相手のID" name="targetUserId" [disabled]="isDisableConnect" />
-    <button (click)="connectPeer()" [disabled]="!networkService.isOpen || targetUserId == null || targetUserId == '' || isDisableConnect">プライベート接続</button><br>
+    <input [(ngModel)]="targetUserId" placeholder="접속하고 싶은 상대의 ID" name="targetUserId" [disabled]="isDisableConnect" />
+    <button (click)="connectPeer()" [disabled]="!networkService.isOpen || targetUserId == null || targetUserId == '' || isDisableConnect">프라이빗 접속</button><br>
   </ng-container>
-  <button *ngIf="networkService.peerIds.length <= 1" (click)="showLobby()" [disabled]="!networkService.isOpen || isDisableConnect">ロビー（ルーム一覧）を表示</button>
+  <button *ngIf="networkService.peerIds.length <= 1" (click)="showLobby()" [disabled]="!networkService.isOpen || isDisableConnect">로비(방 리스트)를 표시</button>
 </div>
 <ng-container *ngIf="!isGMMode && !isGMHold">
   <ng-container *ngIf="!networkService.peerContext.isRoom">
-    <div style="font-size: 12px" *ngIf="networkService.peerContexts.length < 1">※プライベート接続を使用する場合は、お互いのIDをユドナリウム外で共有してください。</div>
-    <div style="font-size: 12px" *ngIf="networkService.peerContexts.length < 1">※一人で動作確認を行いたい場合はブラウザを2つ開くと良いと思います。</div>
+    <div style="font-size: 12px" *ngIf="networkService.peerContexts.length < 1">※프라이빗 접속을 사용할 경우에는 서로의 ID를 유드나리음 외에서 공유해주세요.</div>
+    <div style="font-size: 12px" *ngIf="networkService.peerContexts.length < 1">※혼자서 동작확인을 하고 싶은 경우는 브라우저를 2개 열면 좋다고 생각합니다.</div>
   </ng-container>
   <ng-container *ngIf="networkService.peerContext.isRoom">
-    <div style="font-size: 12px">※ルーム機能を利用している時はプライベート接続を利用できません。</div>
+    <div style="font-size: 12px">※방 기능을 이용하고 있을 때에는 프라이빗 접속을 이용할 수 없습니다.</div>
   </ng-container>
 </ng-container>
-<ng-container *ngIf="isGMMode || isGMHold"><div style="font-size: 12px">※GMモード中（保留中含む）は自分から接続を行えません。</div></ng-container>
+<ng-container *ngIf="isGMMode || isGMHold"><div style="font-size: 12px">※GM모드 중(보류 중 포함)에는 자신으로부터 접속을 실시할 수 없습니다.</div></ng-container>
