--- a/src/app/component/password-check/password-check.component.html
+++ b/src/app/component/password-check/password-check.component.html
@@ -1,6 +1,6 @@
 <form #passwordForm="ngForm">
-  <div>パスワード: <input [(ngModel)]="password" (input)="onInputChange($event.target.value)" [ngModelOptions]="{standalone: true}" placeholder="パスワード" /></div>
-  <button type="submit" (click)="submit()">入室</button>
+  <div>패스워드: <input [(ngModel)]="password" (input)="onInputChange($event.target.value)" [ngModelOptions]="{standalone: true}" placeholder="패스워드" /></div>
+  <button type="submit" (click)="submit()">입실</button>
 </form>
 <div>
   <span style="font-size: 12px;">{{help}}</span>
